Fixed assorted deprecation warnings